Add experimental data flag to build command

--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "0.2.0",
   "private": true,
   "scripts": {
-    "dev": "yarn tinacms server:start -c \"next dev\"",
-    "build": "yarn tinacms server:start -c \"next build\"",
-    "start": "yarn tinacms server:start -c \"next start\"",
+    "dev": "yarn tinacms server:start -c \"next dev\" --experimentalData",
+    "build": "yarn tinacms server:start -c \"next build\" --experimentalData",
+    "start": "yarn tinacms server:start -c \"next start\" --experimentalData",
     "export": "yarn build && next export",
     "nextexport": "next export"
   },
